[gd_scene load_steps=9 format=2]

[ext_resource path="res://Stages/Cutscenes/Cutscene2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Florest_bg.png" type="Texture" id=2]
[ext_resource path="res://tileset_forest.tres" type="TileSet" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/X.png" type="Texture" id=5]
[ext_resource path="res://Assets/Endgoal.png" type="Texture" id=6]
[ext_resource path="res://Stages/Tutorial/Event.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.7753, 158.356 )

[node name="Cutscene2" type="Node2D"]

position = Vector2( -239.735, -3.4248 )
script = ExtResource( 1 )

[node name="Floresta" type="Sprite" parent="." index="0"]

position = Vector2( 635.015, 183.879 )
texture = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0 )

[node name="Player" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 155.087, 539.178 )

[node name="Player2" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( -5.38857, 497.1 )

[node name="Home" type="Sprite" parent="." index="4"]

position = Vector2( 1343.91, 403.145 )
scale = Vector2( 2.46973, 2.65674 )
texture = ExtResource( 5 )

[node name="Endgoal" type="Sprite" parent="." index="5"]

position = Vector2( 1242.53, 534.721 )
texture = ExtResource( 6 )

[node name="Exit" type="Area2D" parent="." index="6"]

position = Vector2( 1094.86, 577.715 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit" index="0"]

position = Vector2( 136.64, -37.1213 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Exit" index="1"]

position = Vector2( -174.764, -39.3391 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Exit" index="2"]

position = Vector2( -514.421, -44.3741 )
shape = SubResource( 1 )

[node name="Event" parent="." index="7" instance=ExtResource( 7 )]

position = Vector2( 241.683, 7.5526 )
z_index = 3
_sections_unfolded = [ "Transform", "Z Index" ]
events = [ Vector2( 0, 576 ), Vector2( 256, 576 ), Vector2( 550, 576 ), Vector2( 680, 576 ) ]
labels = [ "Acho que este é o lugar!", "Finalmente...", "Estou em casa!", "Ugh... Vá embora!" ]
pos = [ Vector2( 400, 256 ), Vector2( 400, 256 ), Vector2( 400, 256 ), Vector2( 400, 256 ) ]
areascale = [ Vector2( 1, -2 ), Vector2( 1, -2 ), Vector2( 1, -2 ), Vector2( 1, -2 ) ]

[node name="Event2" parent="." index="8" instance=ExtResource( 7 )]

position = Vector2( 239.166, 5.03507 )
z_index = 3
_sections_unfolded = [ "Transform", "Z Index" ]
events = [ Vector2( -100, 576 ), Vector2( 0, 576 ), Vector2( 300, 576 ) ]
labels = [ "Eu não entraria aí", "Se fosse você", "Hehehe" ]
pos = [ Vector2( 150, 256 ), Vector2( 150, 256 ), Vector2( 150, 256 ) ]
areascale = [ Vector2( -1, -5 ), Vector2( 1, -5 ), Vector2( 1, -5 ) ]
red = true

[node name="Timer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


